--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
+    "react-pell": "^0.4.0",
+    "sanitize-html": "^1.21.1",
     "sequelize": "^5.21.4",
     "stripe": "^8.17.0"
   },
